update handbooks and ts files

--- a/mscore/manual/sources/MuseScore-ru.html
+++ b/mscore/manual/sources/MuseScore-ru.html
@@ -3,36 +3,21 @@
   <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="search" href="http://www.musescore.org/ru/opensearch/apachesolr_search" type="application/opensearchdescription+xml" title="MuseScore Поиск" />
-
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_9ae727c321d6a7ea54c4ec3fc46bb76b.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_085203dcc0f6f633803f8169cb2396f5.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx"}});
 //--><!]]>
 </script>
     <meta name='robots' content='noindex, nofollow' />
-    <base href='http://www.musescore.org/ru/c%D0%BF%D1%80%D0%B0%D0%B2%D0%BE%D1%87%D0%BD%D0%B8%D0%BA/%D0%B2%D0%B2%D0%B5%D0%B4%D0%B5%D0%BD%D0%B8%D0%B5' />
-    <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/project/project.css?y" />
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/project_issue/project_issue.css?y" />
-<link type="text/css" rel="stylesheet" media="all" href="/modules/book/book.css?y" />
-<link type="text/css" rel="stylesheet" media="all" href="/modules/node/node.css?y" />
-<link type="text/css" rel="stylesheet" media="all" href="/modules/poll/poll.css?y" />
-<link type="text/css" rel="stylesheet" media="all" href="/modules/system/defaults.css?y" />
-<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system.css?y" />
-<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system-menus.css?y" />
-<link type="text/css" rel="stylesheet" media="all" href="/modules/user/user.css?y" />
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/cck/theme/content-module.css?y" />
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/filefield/filefield.css?y" />
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/simplenews/simplenews.css?y" />
-<link type="text/css" rel="stylesheet" media="all" href="/modules/forum/forum.css?y" />
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/print/css/print.css?y" />
+    <base href='http://musescore.org/ru/c%D0%BF%D1%80%D0%B0%D0%B2%D0%BE%D1%87%D0%BD%D0%B8%D0%BA/%D0%B2%D0%B2%D0%B5%D0%B4%D0%B5%D0%BD%D0%B8%D0%B5' />
+    <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_9.ico' type='image/x-icon' />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_cbd17c717009b015b29b604f2a31b2e3.css" />
   </head>
   <body>
         <div class="print-logo"></div>
-    <div class="print-site_name">Опубликовано <em>MuseScore</em> (<a href="http://www.musescore.org">http://www.musescore.org</a>)</div>
+    <div class="print-site_name">Опубликовано <em>MuseScore</em> (<a href="http://musescore.org">http://musescore.org</a>)</div>
     <p />
     <div class="print-breadcrumb"><a href="/ru">Главная</a> &gt; Введение</div>
     <hr class="print-hr" />
@@ -56,7 +41,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
 <img src="/sites/musescore.org/files/install-wizard-finish-winxp_1.png" alt="install-wizard-finish-winxp.png" title="install-wizard-finish-winxp.png" width="377" height="295" class="inline" /></p>
 <h4>Запуск MuseScore</h4>
 <p>Для запуска MuseScore нажмите <kbd><samp class="menu">Start</samp> → <samp class="submenu">All Programs</samp> → <samp class="submenu">MuseScore 0.9</samp> → <samp class="menuitem">MuseScore</samp></kbd>. </p>
-<p>Через несколько секунд откроется окно MuseScore с демонстрационной партитурой. Поэкспериментируйте с этой партитурой чтобы прочувствовать программу. Следующее что вы захотите сделать, это, очевидно <a href="http://www.musescore.org/ru/cправочник/создание-новой-партитуры" title="Создание новой партитуры">создать свою партитуру</a>.<br />
+<p>Через несколько секунд откроется окно MuseScore с демонстрационной партитурой. Поэкспериментируйте с этой партитурой чтобы прочувствовать программу. Следующее что вы захотите сделать, это, очевидно <a href="http://musescore.org/ru/cправочник/создание-новой-партитуры" title="Создание новой партитуры">создать свою партитуру</a>.<br />
 <img src="/sites/musescore.org/files/screenshot-demo-score.png" alt="screenshot-demo-score.png" title="screenshot-demo-score.png" width="450" height="416" class="inline" /></p>
 <h3 id="linux-installation">Linux</h3>
 <p>Это руководство написано в основном для пользователей SUSE или Kubuntu с рабочей средой K Desktop Environment (KDE), в скобках (...) для пользователей Ubuntu or Fedora с рабочей средой GNOME Desktop Environment. </p>
@@ -132,7 +117,7 @@ sudo su -c 'echo snd-seq &gt;&gt; /etc/modules'</pre></li>
 <p>Порядок в котором стоят выбранные Вами инструменты соответствует тому как они будут стоять в партитуре. Чтобы изменить порядок выделите инструмент (в списке выбранных) и используя кнопки "вверх" и "вниз" выстройте порядок инструментов. Когда закончили, жмите кнопку "Дальше".</p>
 <h3>Тональности</h3>
 <p>Если Вы пользуетесь новейшей версией MuseScore, проводник попросит указать тональность. Выберите тональность, если надо и щёлкните "Дальше".</p>
-<p>Если Вы пользуетесь версией 0.9.2 или более ранней, проводник не будет спрашивать о <a href="http://www.musescore.org/ru/cправочник/тональности" title="Тональности">тональности</a>, пропустите этот шаг.</p>
+<p>Если Вы пользуетесь версией 0.9.2 или более ранней, проводник не будет спрашивать о <a href="http://musescore.org/ru/cправочник/тональности" title="Тональности">тональности</a>, пропустите этот шаг.</p>
 <h3>Размер такта, затакт и длительность произведения</h3>
 <p><img src="/sites/musescore.org/files/newscore-measures_0.png" alt="New Score wizard: Time signature and measure options" title="New Score wizard: Time signature and measure options" width="450" height="367" class="inline" /></p>
 <p>Установите размер такта, если произведение начинается с затакта, поставьте галочку на «размер затакта» и соответственно размер.</p>
@@ -141,11 +126,11 @@ sudo su -c 'echo snd-seq &gt;&gt; /etc/modules'</pre></li>
 <h3>Настройка партитуры после создания</h3>
 <p>Вы можете изменить свойства партитуры после создания, и даже в процессе работы с партитурой.</p>
 <ul>
-<li>О добавлении и удалении тактов или затактов, читайте <a href="http://www.musescore.org/ru/cправочник/работа-с-тактами" title="Работа с тактами">Работа с тактами</a></li>
-<li>Чтобы изменить любой текст читайте <a href="http://www.musescore.org/ru/cправочник/редактирование-текста" title="Редактирование текста">Редактирование текста</a>. Чтобы добавить название (или текстовый элемент) откройте меню <kbd><samp class="menu">Вставка</samp> → <samp class="submenu">Текст</samp> → <samp class="menuitem">Название</samp></kbd> (или другой текстовый элемент)</li>
+<li>О добавлении и удалении тактов или затактов, читайте <a href="http://musescore.org/ru/cправочник/работа-с-тактами" title="Работа с тактами">Работа с тактами</a></li>
+<li>Чтобы изменить любой текст читайте <a href="http://musescore.org/ru/cправочник/редактирование-текста" title="Редактирование текста">Редактирование текста</a>. Чтобы добавить название (или текстовый элемент) откройте меню <kbd><samp class="menu">Вставка</samp> → <samp class="submenu">Текст</samp> → <samp class="menuitem">Название</samp></kbd> (или другой текстовый элемент)</li>
 <li>Чтобы добавить или удалить инструмент, или поменять порядок инструментов, в меню <kbd><samp class="menu">Вставка</samp> → <samp class="menuitem">Инструменты</samp></kbd>.</li>
 </ul>
-<p>Читайте также: <a href="http://www.musescore.org/ru/cправочник/тональности" title="Тональности">Тональности</a>, <a href="http://www.musescore.org/ru/cправочник/размер-такта" title="Размер такта">Размер такта</a>, <a href="http://www.musescore.org/ru/cправочник/ключи" title="Ключи">Ключи</a>.</p>
+<p>Читайте также: <a href="http://musescore.org/ru/cправочник/тональности" title="Тональности">Тональности</a>, <a href="http://musescore.org/ru/cправочник/размер-такта" title="Размер такта">Размер такта</a>, <a href="http://musescore.org/ru/cправочник/ключи" title="Ключи">Ключи</a>.</p>
 <h3 id="newscore-templates">Шаблоны</h3>
 <p>На первой странице проводника создания новой партитуры была опция "Создать новую партитуру из шаблона" Помните? Итак чтобы создать партитуру из шаблона, на первой странице проводника выберите эту опцию и нажмите кнопку "Дальше". </p>
 <p>На следующей странице выберите подходящий шаблон и нажмите "Дальше", и продолжите как и в первом случае. </p>
@@ -155,7 +140,7 @@ sudo su -c 'echo snd-seq &gt;&gt; /etc/modules'</pre></li>
 </div>
     <div class="print-taxonomy"></div>
     <hr class="print-hr" />
-    <div class="print-footer">На условиях лицензии <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution 3.0</a>, 2002-2009 <a href="mailto:ws at seh dot de">Werner Schweer</a> и другие.
+    <div class="print-footer">На условиях лицензии <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution 3.0</a>, 2002-2010 <a href="mailto:ws at seh dot de">Werner Schweer</a> и другие.
 </div>
     <div class="print-source_url"></div>
     <div class="print-links"></div>
